// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout actions should changeActiveMenu to Monitor 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "active": "Monitor",
        "menuItems": Array [
          Object {
            "active": true,
            "children": Array [
              Object {
                "name": "Dashboard",
                "type": "item",
                "url": "/",
              },
              Object {
                "name": "Hello",
                "type": "divider",
              },
              Object {
                "name": "Facts",
                "type": "item",
                "url": "/fact_values",
              },
            ],
            "icon": "fa fa-tachometer",
            "name": "Monitor",
            "type": "sub_menu",
          },
          Object {
            "active": false,
            "children": Array [
              Object {
                "name": "All Hosts",
                "type": "item",
                "url": "/hosts/new",
              },
              Object {
                "name": "There",
                "type": "divider",
              },
              Object {
                "name": "Architectures",
                "type": "item",
                "url": "/architectures",
              },
            ],
            "icon": "fa fa-server",
            "name": "Hosts",
            "type": "sub_menu",
          },
          Object {
            "active": false,
            "children": Array [
              Object {
                "name": "Environments",
                "type": "item",
                "url": "/environments",
              },
              Object {
                "name": "Dear",
                "type": "divider",
              },
              Object {
                "name": "Architectures",
                "type": "item",
                "url": "/architectures",
              },
            ],
            "icon": "fa fa-wrench",
            "name": "User",
            "type": "sub_menu",
          },
          Object {
            "active": false,
            "children": Array [
              Object {
                "name": "Domains",
                "type": "item",
                "url": "/domains",
              },
              Object {
                "name": "Friend",
                "type": "divider",
              },
              Object {
                "name": "Realms",
                "type": "item",
                "url": "/realms",
              },
            ],
            "icon": "pficon pficon-network",
            "name": "Infrastructure",
            "type": "sub_menu",
          },
        ],
      },
      "type": "LAYOUT_CHANGE_ITEMS",
    },
  ],
]
`;

exports[`Layout actions should changeLocation 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "location": "loc1",
      },
      "type": "LAYOUT_CHANGE_LOCATION",
    },
  ],
]
`;

exports[`Layout actions should changeOrganization 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "org": "org1",
      },
      "type": "LAYOUT_CHANGE_ORG",
    },
  ],
]
`;

exports[`Layout actions should fetchMenuItems 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "menuItems": undefined,
      },
      "type": "LAYOUT_CHANGE_ITEMS",
    },
  ],
]
`;

exports[`Layout actions should hideLoading 1`] = `
Object {
  "type": "LAYOUT_HIDE_LOADING",
}
`;

exports[`Layout actions should showLoading 1`] = `
Object {
  "type": "LAYOUT_SHOW_LOADING",
}
`;
